objects/Student_PG__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PGCellPhone__c</fullName>
        <formula>Parent_Guardian_c__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/G Cell Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_First_Name__c</fullName>
        <formula>Parent_Guardian_c__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/G First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Last_Name__c</fullName>
        <formula>Parent_Guardian_c__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/G Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Middle_Name__c</fullName>
        <formula>Parent_Guardian_c__r.Middle_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/G Middle Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Relationship__c</fullName>
        <formula>TEXT(Parent_Guardian_c__r.Relationship__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/G Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_G_Personal_Phone__c</fullName>
        <formula>Parent_Guardian_c__r.Personal_Phone__c</formula>
        <label>P/G Personal Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_G_Phone__c</fullName>
        <formula>Parent_Guardian_c__r.Phone</formula>
        <label>P/G Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent/Guardian (c)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Student_PG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if this Parent/Guardian is the main point of contact for this student.</inlineHelpText>
        <label>Primary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Parents/Guardians</relationshipLabel>
        <relationshipName>Student_PG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_c__c</fullName>
        <label>Student (c)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parents/Guardians</relationshipLabel>
        <relationshipName>Student_PG1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student/PG</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPG-{000000}</displayFormat>
        <label>Student/PG ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student/PG</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>